<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/dark_blue"
    tools:context=".activities.MainActivity">
    android:orientation="vertical">
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/photoView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:src="@drawable/snap"
        />

    <TextView
        android:layout_below="@+id/photoView"
        android:id="@+id/txt_hey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/hey"
        android:textColor="@color/white"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/nameView"
        android:layout_below="@id/txt_hey"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/roboto_bold"
        android:textSize="15sp"
        android:text="Yischard"
        android:textColor="@color/white"
        />

    <LinearLayout
        android:id="@+id/lyt_profile"
        android:layout_below="@id/nameView"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_person"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/profile" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_home"
        android:layout_below="@+id/lyt_profile"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_home"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/home_page" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_cart"
        android:layout_below="@id/lyt_home"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_cart"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/my_cart" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_wishList"
        android:layout_below="@+id/lyt_cart"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_wish"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/wish_list" />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/lyt_notification"
        android:layout_below="@id/lyt_wishList"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_notification"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_marginLeft="20dp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto"
            android:text="@string/notifications" />
    </LinearLayout>


</RelativeLayout>